No fixed header on mobile

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -11,13 +11,6 @@
         @include font-size($font-size-lg);
     }
     &__nav {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        z-index: 2;
-        pointer-events: none;
         display: flex;
         flex-flow: column nowrap;
         justify-content: space-between;
@@ -46,7 +39,6 @@
         }
         &__nav {
             grid-area: navigation;
-            position: static;
         }
     }
 
@@ -67,7 +59,6 @@
         display: block;
     }
     flex: 1 1 auto;
-    pointer-events: initial;
 
     overflow-y: auto;
     overscroll-behavior: contain;
@@ -146,7 +137,6 @@ $hamburger-padding-y: 1rem;
     @media (min-width: 65rem) {
         display: none;
     }
-    flex: 0 0 auto;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -155,7 +145,6 @@ $hamburger-padding-y: 1rem;
     // background: linear-gradient(to bottom, rgba($white, 1) 0%, rgba($white, 1) 75%, rgba($white, 0) 100%);
     background: $navigation-bg;
     color: $white;
-    pointer-events: initial;
     &__burger {
         // &.is-active:focus {
         //     outline: none;
